# Microservices-Powered-Calculator

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
aiogram_bot/: Dockerfile  bot.py  pyproject.toml
aiogram_bot/bot_menu/: menu.py
aiogram_bot/config/: .env  config.py
aiogram_bot/handlers/: user_handlers.py
aiogram_bot/service/: service.py
aiogram_bot/src/: bot.py
aiogram_bot/src/config/: .env_example
aiogram_bot/src/handlers/: other_handlers.py  user_handlers.py
aiogram_bot/src/inline_keyboard/: keyboard.py
aiogram_bot/src/service/: __init__.py  service.py
api/: Dockerfile  pyproject.toml
api/src/: main.py
api/src/views/: __init__.py  views.py
api/src/views/service/: __init__.py  service.py
api_server/: api.py
api_server/service/: service.py
api_server/views/: views.py
web_application/: Dockerfile  package-lock.json  package.json  server.js
web_application/public/: index.html  index.js
