[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sentiago <arseny317@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2024.5.15"
sympy = "^1.12.1"
latex2sympy2 = "^1.9.1"
fastapi = "^0.111.0"
aiogram = "^3.6.0"
requests = "^2.32.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
